feat(app,front,schema): add `/users/search` API
