# app/internal/handler/oapi/user/users.go
@@ -3,20 +3,21 @@ package user
 import (
 	"github.com/Siroshun09/serrors"
 	"github.com/okocraft/monitor/internal/domain/permission"
+	"github.com/okocraft/monitor/internal/domain/user"
 	"github.com/okocraft/monitor/internal/handler/oapi"
 	permissionUsecase "github.com/okocraft/monitor/internal/usecases/permission"
-	"github.com/okocraft/monitor/internal/usecases/user"
+	userUsecase "github.com/okocraft/monitor/internal/usecases/user"
 	"github.com/okocraft/monitor/lib/ctxlib"
 	"github.com/okocraft/monitor/lib/httplib"
 	"net/http"
 )
 
 type UserHandler struct {
-	usecase           user.UserUsecase
+	usecase           userUsecase.UserUsecase
 	permissionUsecase permissionUsecase.PermissionUsecase
 }
 
-func NewUserHandler(usecase user.UserUsecase, permissionUsecase permissionUsecase.PermissionUsecase) UserHandler {
+func NewUserHandler(usecase userUsecase.UserUsecase, permissionUsecase permissionUsecase.PermissionUsecase) UserHandler {
 	return UserHandler{
 		usecase:           usecase,
 		permissionUsecase: permissionUsecase,
@@ -63,4 +64,36 @@ func (h UserHandler) GetUsersByIds(w http.ResponseWriter, r *http.Request) {
 	}
 
 	httplib.RenderOK(ctx, w, res)
+}
+
+func (h UserHandler) SearchUsers(w http.ResponseWriter, r *http.Request, params oapi.SearchUsersParams) {
+	ctx := r.Context()
+
+	userID, ok := ctxlib.GetUserID(ctx)
+	if !ok {
+		httplib.RenderOK(ctx, w, []oapi.UUID{})
+		return
+	}
+
+	if hasPermission, err := h.permissionUsecase.HasPermission(ctx, userID, permission.UserList); err != nil {
+		httplib.RenderError(ctx, w, err)
+		return
+	} else if !hasPermission {
+		httplib.RenderOK(ctx, w, []oapi.UUID{})
+		return
+	}
+
+	searchParams, err := user.NewSearchParamsFromRequest(params)
+	if err != nil {
+		httplib.RenderBadRequest(ctx, w, err)
+		return
+	}
+
+	ids, err := h.usecase.SearchForUserUUIDs(ctx, searchParams)
+	if err != nil {
+		httplib.RenderError(ctx, w, err)
+		return
+	}
+
+	httplib.RenderOK(ctx, w, ids)
 }
