# schema/openapi/monitor-api.yml
@@ -142,6 +142,60 @@ paths:
               type: array
               items:
                 $ref: '#/components/schemas/UUID'
+  /users/search:
+    get:
+      operationId: searchUsers
+      description: get user ids
+      parameters:
+        - name: nickname
+          in: query
+          required: false
+          schema:
+            type: string
+          explode: false
+        - name: last_access_before
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+          explode: false
+        - name: last_access_after
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+          explode: false
+        - name: role_id
+          in: query
+          required: false
+          schema:
+            $ref: '#/components/schemas/UUID'
+          explode: false
+        - name: sorted_by
+          in: query
+          required: false
+          schema:
+            $ref: '#/components/schemas/SortableUserDataType'
+          explode: false
+        - name: sort_type
+          in: query
+          required: false
+          schema:
+            $ref: '#/components/schemas/SortType'
+          explode: false
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/UUID'
+      tags:
+        - User
 security:
   - AccessTokenAuth: []
 components:
@@ -221,6 +275,20 @@ components:
         updated_at:
           type: string
           format: date-time
+    SortType:
+      type: string
+      enum:
+        - ASC
+        - DESC
+    SortableUserDataType:
+      type: string
+      enum:
+        - NickName
+        - LastAccess
+        - CreatedAt
+        - UpdatedAt
+        - RoleName
+        - RolePriority
     UUID:
       type: string
       format: uuid
